# pmm

./: CMakeLists.txt
src/: commands.c  commands.h  common.c  common.h  main.c
src/client/: alpm.c  alpm.h  client.c  client.h  pacman.c  pacman.h  std_syntax.c  std_syntax.h
src/db/: btree.c  btree.h  defines.h  ext.c  ext.h  pkg.c  pkg.h  table.c  table.h
src/tables/: defines.h  pkg.c  pkg.h
src/util/: attr.h  color.c  color.h  vector.c  vector.h
